Make sure we don't do any extra blocking reads if we still have buffered data to process; fixes freezes on websites with extremely small reply headers, like abclinuxu.cz

BUG:180631

svn path=/branches/KDE/4.2/kdelibs/; revision=926999